--- a/08-HTML/homework/style.css
+++ b/08-HTML/homework/style.css
@@ -2,17 +2,18 @@ img{
     width: 400px;
 }
 #thirdDiv{
-    height: 800px; 
+    min-height:auto; 
     width: 500px; 
     background-color: orange;
     color:brown; 
     padding: 50px; 
-    border-color: pink ;
+    border: pink 5px solid;
+    align-items: center;
 }
 #spanId{
     font-size: 18px; 
     margin: 50px;
 }
 h1 {
-    color: red
+    color: red;
 }
