--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -17,24 +17,62 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Acá va tu código */
 
+#ejercicioDos{
+    display: none;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
 
-
+#ejercicioTres{
+    position: absolute;
+    left: 200px;
+    top: 100px;
+}
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
-
+#ejercicioCuatro{
+    position: fixed;
+    top:0;
+    left: 0;
+}
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-
+#ejercicioCinco{
+    display: flex;
+    justify-content: space-between ;
+    align-items: center;
+    flex-direction: row-reverse;
+}
 
 
 /* Ejercicio 6. */
+#ejercicioSiete{
+    display: flex;
+}
+
+#elementoDos{
+    position: relative;
+    background: gold;
+    top: 100px;
+    right: 10px;
+}
+#elementoCuatro{
+    position: relative;
+    background:blueviolet;
+    top: 200px;
+    right: 150px;
+}
+#elementoUno{
+    position: relative;
+    background-color: coral;
+    top: 300px;
+    left: 150px;
+}
